--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Chai Recipe</h1>
+      <img src="chai.webp" alt="chai being poured into a white cup with a white background">
 </body>
 </html>
