Fix image and ul typo

--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>Chai Recipe</h1>
-      <img src="chai.webp" alt="chai being poured into a white cup with a white background">
+      <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
     <h2>Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
     <h2>Ingredients</h2>
       <ul>
-          <li>Tea strainer<li>
-          <li>Mug<li>
+          <li>Tea strainer</li>
+          <li>Mug</li>
           <li>1 cup boiling hot water</li>
           <li>2 tablespoons of looseleaf black tea or 1 tea bag</li>
           <li>Few splashes of milk</li>
@@ -23,7 +23,7 @@
           <li>Pinch of fennel seeds</li>
           <li>1 clove</li>
       </ul>
-    <h3>Steps</h3>
+    <h2>Steps</h2>
       <ol>
         <li>Step 1: Boil the water.</li>
         <li>Step 2: While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
