--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chai Recipe</h1>
-      <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
+      <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
     <h2>Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
     <h2>Ingredients</h2>
