Add body of aeropress.html recipe

--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chai Recipe</title>
+    <title>Aeropress Recipe</title>
 </head>
 <body>
-    <h1>Chai Recipe</h1>
+    <h1>Aeropress Recipe</h1>
       <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
     <h2>Description</h2>
-      <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
+      <p>The Aeropress is a coffee-making contraption that produces strong, flavorful coffee with minimal effort. While there is one standard method of brewing coffee provided by the manufacturer, many people have come up with their own adaptations. This is a simple recipe for an amazing cup of coffee with the aeropress, popularized by James Hoffmann. It takes about 5 minutes in total.</p>
     <h2>Ingredients</h2>
       <ul>
-          <li>Tea strainer</li>
+          <li>Aeropress</li>
+          <li>Aeropress coffee filter</li>
           <li>Mug</li>
           <li>1 cup boiling hot water</li>
-          <li>2 tablespoons of looseleaf black tea or 1 tea bag</li>
-          <li>Few splashes of milk</li>
-          <li>Four cardamom pods</li>
-          <li>Dash of cinnamon</li>
-          <li>Dash of ginger</li>
-          <li>Pinch of fennel seeds</li>
-          <li>1 clove</li>
+          <li>2 tablespoons of ground coffee</li>
       </ul>
     <h2>Steps</h2>
       <ol>
-        <li>Step 1: Boil the water.</li>
-        <li>Step 2: While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
-        <li>Step 3: Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
-        <li>Step 4: When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
-        <li>Step 5: Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
-        <li>Step 6: Enjoy!</li>
+        <li>Boil the water.</li>
+        <li>While the water is boiling, scoop the coffee into the aeropress coffee filter chamber.</li>
+        <li>When water is boiled, add the water to the filter chamber to the number 4 circle.</li>
+        <li>Press the plunger slightly into the Aeropress chamber, just enough to create a vacuum seal.</li>
+        <li>Let the coffee brew for about 2 minutes.</li>
+        <li>Holding the Aeropress plunger and chamber, gently swirl to break up the coffee crust. Stop swirling once the coffee frees up and wait 30 seconds.</li>
+        <li>Slowly plunge with equal pressure. This should take about 30 seconds.</li>
+        <li>Once fully plunged, pull the plunger back a little to help prevent drippage. Then discard the coffee grounds.</li>
+        <li>Enjoy!</li>
       </ol>
 </body>
 </html>
