Fix redundancies in 'Steps' ol

--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -25,12 +25,12 @@
       </ul>
     <h2>Steps</h2>
       <ol>
-        <li>Step 1: Boil the water.</li>
-        <li>Step 2: While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
-        <li>Step 3: Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
-        <li>Step 4: When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
-        <li>Step 5: Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
-        <li>Step 6: Enjoy!</li>
+        <li>Boil the water.</li>
+        <li>While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
+        <li>Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
+        <li>When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
+        <li>Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
+        <li>Enjoy!</li>
       </ol>
 </body>
 </html>
