--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chai Recipe</title>
+    <title>Pineapple Ginger Tea Recipe</title>
 </head>
 <body>
-    <h1>Chai Recipe</h1>
-      <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
+    <h1>Pineapple Ginger Tea Recipe</h1>
+      <img src="../images/pineappletea.jpeg" alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups" height="310" width="310">
     <h2>Description</h2>
-      <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
+      <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
     <h2>Ingredients</h2>
       <ul>
+          <li>Pot</li>
           <li>Tea strainer</li>
           <li>Mug</li>
-          <li>1 cup boiling hot water</li>
-          <li>2 tablespoons of looseleaf black tea or 1 tea bag</li>
-          <li>Few splashes of milk</li>
-          <li>Four cardamom pods</li>
-          <li>Dash of cinnamon</li>
-          <li>Dash of ginger</li>
-          <li>Pinch of fennel seeds</li>
-          <li>1 clove</li>
+          <li>4 cups of water</li>
+          <li>Rinds from one pineapple</li>
+          <li>A few inches of ginger, maybe a tablespoon or two</li>
+          <li>Honey if you want it sweetened</li>
       </ul>
     <h2>Steps</h2>
       <ol>
-        <li>Step 1: Boil the water.</li>
-        <li>Step 2: While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
-        <li>Step 3: Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
-        <li>Step 4: When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
-        <li>Step 5: Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
-        <li>Step 6: Enjoy!</li>
+        <li>Boil the water in the pot.</li>
+        <li>While water is boiling, cut the pineapple rinds off of the pineapple and cut them into smmall strips, around 3 inches long and an inch wide.</li>
+        <li>Mince the ginger or cut into small strips.</li>
+        <li>Put the ginger and pineapple rinds in the water. You can put them in while the water is boiling or you can wait for the water to boil.</li>
+        <li>Once water is fully boiling, turn down heat to maintain a simmer. Simmer covered or uncovered for at least 7 minutes, or as long as you prefer. </li>
+        <li>Strain the tea into a large jar and pour individual servings as desired.</li>
+        <li>Enjoy!</li>
       </ol>
 </body>
 </html>
