Add recipe links to index.html homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Odin Recipes Project</title>
 </head>
 <body>
-   <h1>Odin Recipes</h1> 
-    <a href="recipes/chai.html">Chai Recipe</a> 
+   <h1>Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
+      <ul>
+        <li><a href="recipes/chai.html">Chai Recipe</a></li>
+        <li><a href="recipes/aeropress.html">Aeropress Coffee Recipe</a></li>
+        <li><a href="recipes/pineappletea.html">Pineapple Ginger Tea Recipe</a></li> 
+      </ul>
 </body>
 </html>
