Ad tags to links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
    <h1>Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
       <ul>
-        <li><a href="recipes/chai.html">Chai Recipe</a></li>
-        <li><a href="recipes/aeropress.html">Aeropress Coffee Recipe</a></li>
-        <li><a href="recipes/pineappletea.html">Pineapple Ginger Tea Recipe</a></li> 
+        <li><a href="recipes/chai.html" rel="noopener noreferrer">Chai Recipe</a></li>
+        <li><a href="recipes/aeropress.html" rel="noopener noreferrer">Aeropress Coffee Recipe</a></li>
+        <li><a href="recipes/pineappletea.html" rel="noopener noreferrer">Pineapple Ginger Tea Recipe</a></li> 
       </ul>
 </body>
 </html>
