Add navigation links to recipe pages

--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -30,5 +30,6 @@
         <li>Once fully plunged, pull the plunger back a little to help prevent drippage. Then discard the coffee grounds.</li>
         <li>Enjoy!</li>
       </ol>
+    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
