--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -30,5 +30,6 @@
         <li>Strain the tea into a large jar and pour individual servings as desired.</li>
         <li>Enjoy!</li>
       </ol>
+    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
