--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -32,5 +32,6 @@
         <li>Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
         <li>Enjoy!</li>
       </ol>
+    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
 </body>
 </html>
