--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes Project</title>
 </head>
 <body>
-   <h1>Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
+   <h1 class="header">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
       <ul>
         <li><a href="recipes/chai.html" rel="noopener noreferrer">Chai Recipe</a></li>
         <li><a href="recipes/aeropress.html" rel="noopener noreferrer">Aeropress Coffee Recipe</a></li>
