--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Aeropress Recipe</title>
 </head>
 <body>
-    <h1>Aeropress Recipe</h1>
+    <h1 class="header">Aeropress Recipe</h1>
       <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
-    <h2>Description</h2>
+    <h2 class="header">Description</h2>
       <p>The Aeropress is a coffee-making contraption that produces strong, flavorful coffee with minimal effort. While there is one standard method of brewing coffee provided by the manufacturer, many people have come up with their own adaptations. This is a simple recipe for an amazing cup of coffee with the aeropress, popularized by James Hoffmann. It takes about 5 minutes in total.</p>
-    <h2>Ingredients</h2>
+    <h2 class="header">Ingredients</h2>
       <ul>
           <li>Aeropress</li>
           <li>Aeropress coffee filter</li>
@@ -18,7 +19,7 @@
           <li>1 cup boiling hot water</li>
           <li>2 tablespoons of ground coffee</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water.</li>
         <li>While the water is boiling, scoop the coffee into the aeropress coffee filter chamber.</li>
