--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Chai Recipe</title>
 </head>
 <body>
-    <h1>Chai Recipe</h1>
+    <h1 class="header">Chai Recipe</h1>
       <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
-    <h2>Description</h2>
+    <h2 class="header">Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
-    <h2>Ingredients</h2>
+    <h2 class="header">Ingredients</h2>
       <ul>
           <li>Tea strainer</li>
           <li>Mug</li>
@@ -23,7 +24,7 @@
           <li>Pinch of fennel seeds</li>
           <li>1 clove</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water.</li>
         <li>While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
