--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pineapple Ginger Tea Recipe</title>
 </head>
 <body>
-    <h1>Pineapple Ginger Tea Recipe</h1>
+    <h1 class="header">Pineapple Ginger Tea Recipe</h1>
       <img src="../images/pineappletea.jpeg" alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups" height="310" width="310">
-    <h2>Description</h2>
+    <h2 class="header">Description</h2>
       <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
-    <h2>Ingredients</h2>
+    <h2 class="header">Ingredients</h2>
       <ul>
           <li>Pot</li>
           <li>Tea strainer</li>
