--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes Project</title>
 </head>
-<body>
-   <h1 class="header">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
+<body> 
+  <div class="main">
+    <h1 class="header index">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
+    <div class="links">
       <ul>
         <li><a href="recipes/chai.html" rel="noopener noreferrer">Chai Recipe</a></li>
         <li><a href="recipes/aeropress.html" rel="noopener noreferrer">Aeropress Coffee Recipe</a></li>
         <li><a href="recipes/pineappletea.html" rel="noopener noreferrer">Pineapple Ginger Tea Recipe</a></li> 
       </ul>
+    </div>
+  </div>
 </body>
 </html>
