Add button html and css styling

--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -7,6 +7,7 @@
     <title>Aeropress Recipe</title>
 </head>
 <body>
+  <div class="main">
     <h1 class="header">Aeropress Recipe</h1>
       <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
     <h2 class="header">Description</h2>
@@ -31,6 +32,7 @@
         <li>Once fully plunged, pull the plunger back a little to help prevent drippage. Then discard the coffee grounds.</li>
         <li>Enjoy!</li>
       </ol>
-    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
+    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
+  </div>
 </body>
 </html>
