--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -7,6 +7,7 @@
     <title>Chai Recipe</title>
 </head>
 <body>
+  <div class="main">
     <h1 class="header">Chai Recipe</h1>
       <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
     <h2 class="header">Description</h2>
@@ -33,6 +34,7 @@
         <li>Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
         <li>Enjoy!</li>
       </ol>
-    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
+    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
+  </div>
 </body>
 </html>
