--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -7,6 +7,7 @@
     <title>Pineapple Ginger Tea Recipe</title>
 </head>
 <body>
+  <div class="main">
     <h1 class="header">Pineapple Ginger Tea Recipe</h1>
       <img src="../images/pineappletea.jpeg" alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups" height="310" width="310">
     <h2 class="header">Description</h2>
@@ -31,6 +32,7 @@
         <li>Strain the tea into a large jar and pour individual servings as desired.</li>
         <li>Enjoy!</li>
       </ol>
-    <a href="../index.html" rel="noopener noreferrer">Back to Homepage</a>
+    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
+  </div>  
 </body>
 </html>
