Add css to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
   <div class="main">
-    <h1 class="header index">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
+    <h1 class="header title">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
     <div class="links">
       <ul>
         <li><a href="recipes/chai.html" rel="noopener noreferrer">Chai Recipe</a></li>
