--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="main">
-    <h1 class="header">Chai Recipe</h1>
+    <h1 class="header title">Chai Recipe</h1>
       <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
     <h2 class="header">Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
