--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="main">
-    <h1 class="header">Aeropress Recipe</h1>
+    <h1 class="header title">Aeropress Recipe</h1>
       <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
     <h2 class="header">Description</h2>
       <p>The Aeropress is a coffee-making contraption that produces strong, flavorful coffee with minimal effort. While there is one standard method of brewing coffee provided by the manufacturer, many people have come up with their own adaptations. This is a simple recipe for an amazing cup of coffee with the aeropress, popularized by James Hoffmann. It takes about 5 minutes in total.</p>
