Add border styling to description in pineapple

--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -10,9 +10,11 @@
   <div class="main">
     <h1 class="header title">Pineapple Ginger Tea Recipe</h1>
       <img src="../images/pineappletea.jpeg" alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups" height="310" width="310">
-    <h2 class="header">Description</h2>
-      <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
-    <h2 class="header">Ingredients</h2>
+      <div class="description">
+        <h2 class="header">Description</h2>
+        <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
+      </div>
+      <h2 class="header">Ingredients</h2>
       <ul>
           <li>Pot</li>
           <li>Tea strainer</li>
@@ -22,7 +24,7 @@
           <li>A few inches of ginger, maybe a tablespoon or two</li>
           <li>Honey if you want it sweetened</li>
       </ul>
-    <h2>Steps</h2>
+    <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water in the pot.</li>
         <li>While water is boiling, cut the pineapple rinds off of the pineapple and cut them into smmall strips, around 3 inches long and an inch wide.</li>
