--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -10,9 +10,11 @@
   <div class="main">
     <h1 class="header title">Chai Recipe</h1>
       <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
-    <h2 class="header">Description</h2>
+    <div class="description">
+      <h2 class="header">Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
-    <h2 class="header">Ingredients</h2>
+    </div>
+      <h2 class="header">Ingredients</h2>
       <ul>
           <li>Tea strainer</li>
           <li>Mug</li>
