Add border styling to all ingredients

--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -14,15 +14,17 @@
       <h2 class="header">Description</h2>
       <p>The Aeropress is a coffee-making contraption that produces strong, flavorful coffee with minimal effort. While there is one standard method of brewing coffee provided by the manufacturer, many people have come up with their own adaptations. This is a simple recipe for an amazing cup of coffee with the aeropress, popularized by James Hoffmann. It takes about 5 minutes in total.</p>
     </div>
+    <div class="ingredients">
       <h2 class="header">Ingredients</h2>
-      <ul>
+        <ul>
           <li>Aeropress</li>
           <li>Aeropress coffee filter</li>
           <li>Mug</li>
           <li>1 cup boiling hot water</li>
           <li>2 tablespoons of ground coffee</li>
-      </ul>
-    <h2 class="header">Steps</h2>
+        </ul>
+    </div>
+     <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water.</li>
         <li>While the water is boiling, scoop the coffee into the aeropress coffee filter chamber.</li>
