--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -14,8 +14,9 @@
       <h2 class="header">Description</h2>
       <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
     </div>
+    <div class="ingredients">  
       <h2 class="header">Ingredients</h2>
-      <ul>
+       <ul>
           <li>Tea strainer</li>
           <li>Mug</li>
           <li>1 cup boiling hot water</li>
@@ -26,8 +27,9 @@
           <li>Dash of ginger</li>
           <li>Pinch of fennel seeds</li>
           <li>1 clove</li>
-      </ul>
-    <h2 class="header">Steps</h2>
+        </ul>
+    </div>
+      <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water.</li>
         <li>While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
