--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -14,17 +14,19 @@
         <h2 class="header">Description</h2>
         <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
       </div>
-      <h2 class="header">Ingredients</h2>
-      <ul>
-          <li>Pot</li>
-          <li>Tea strainer</li>
-          <li>Mug</li>
-          <li>4 cups of water</li>
-          <li>Rinds from one pineapple</li>
-          <li>A few inches of ginger, maybe a tablespoon or two</li>
-          <li>Honey if you want it sweetened</li>
-      </ul>
-    <h2 class="header">Steps</h2>
+      <div class="ingredients">
+        <h2 class="header">Ingredients</h2>
+          <ul>
+            <li>Pot</li>
+            <li>Tea strainer</li>
+            <li>Mug</li>
+            <li>4 cups of water</li>
+            <li>Rinds from one pineapple</li>
+            <li>A few inches of ginger, maybe a tablespoon or two</li>
+            <li>Honey if you want it sweetened</li>
+          </ul>
+      </div>
+      <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water in the pot.</li>
         <li>While water is boiling, cut the pineapple rinds off of the pineapple and cut them into smmall strips, around 3 inches long and an inch wide.</li>
