Add border styling to all steps

--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -26,8 +26,9 @@
             <li>Honey if you want it sweetened</li>
           </ul>
       </div>
-      <h2 class="header">Steps</h2>
-      <ol>
+      <div class="steps">
+       <h2 class="header">Steps</h2>
+       <ol>
         <li>Boil the water in the pot.</li>
         <li>While water is boiling, cut the pineapple rinds off of the pineapple and cut them into smmall strips, around 3 inches long and an inch wide.</li>
         <li>Mince the ginger or cut into small strips.</li>
@@ -35,8 +36,9 @@
         <li>Once water is fully boiling, turn down heat to maintain a simmer. Simmer covered or uncovered for at least 7 minutes, or as long as you prefer. </li>
         <li>Strain the tea into a large jar and pour individual servings as desired.</li>
         <li>Enjoy!</li>
-      </ol>
-    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
+       </ol>
+     </div>
+     <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
   </div>  
 </body>
 </html>
