--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -24,6 +24,7 @@
           <li>2 tablespoons of ground coffee</li>
         </ul>
     </div>
+    <div class="steps">
      <h2 class="header">Steps</h2>
       <ol>
         <li>Boil the water.</li>
@@ -35,7 +36,8 @@
         <li>Slowly plunge with equal pressure. This should take about 30 seconds.</li>
         <li>Once fully plunged, pull the plunger back a little to help prevent drippage. Then discard the coffee grounds.</li>
         <li>Enjoy!</li>
-      </ol>
+       </ol>
+     </div>
     <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
   </div>
 </body>
