--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -29,15 +29,17 @@
           <li>1 clove</li>
         </ul>
     </div>
+    <div class="steps"> 
       <h2 class="header">Steps</h2>
-      <ol>
+       <ol>
         <li>Boil the water.</li>
         <li>While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
         <li>Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
         <li>When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
         <li>Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
         <li>Enjoy!</li>
-      </ol>
+       </ol>
+    </div> 
     <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
   </div>
 </body>
